--- a/index.html
+++ b/index.html
@@ -595,10 +595,6 @@
                     <span class="hero-stat-value">50</span>
                     <span class="hero-stat-label">Vagas</span>
                 </div>
-                <div>
-                    <span class="hero-stat-value">+10</span>
-                    <span class="hero-stat-label">Turmas formadas</span>
-                </div>
             </div>
             <div class="hero-buttons">
                 <a href="#inscricao" class="btn btn-primary">Quero me inscrever &rarr;</a>
@@ -618,7 +614,7 @@
                 <div class="info-icon">&#128336;</div>
                 <div>
                     <div class="info-label">Horário</div>
-                    <div class="info-value">Sextas 18h30 - 22h30 | Sábados 8h - 12h30</div>
+                    <div class="info-value">Sextas 19h00 - 22h30 | Sábados 8h - 12h30, e eventualmente 14h - 18h</div>
                 </div>
             </div>
             <div class="info-item">
@@ -706,7 +702,7 @@
         <div class="diff-grid">
             <div class="diff-card">
                 <div class="diff-number">01</div>
-                <h3>Corpo Docente de Elite</h3>
+                <h3>Corpo Docente com Experiência Internacional</h3>
                 <p>Professores doutores com produção científica internacional e experiência de mercado comprovada.</p>
             </div>
             <div class="diff-card">
@@ -722,7 +718,7 @@
             <div class="diff-card">
                 <div class="diff-number">04</div>
                 <h3>Formato Flexível</h3>
-                <p>Aulas quinzenais em formato semipresencial, pensado para quem não pode parar de trabalhar.</p>
+                <p>Aulas quinzenais com professores da ESPM, FGV-SP, PUC-PR, IBMEC e muitas outras.</p>
             </div>
             <div class="diff-card">
                 <div class="diff-number">05</div>
@@ -746,57 +742,85 @@
         <p class="section-subtitle">365 horas de conteúdo distribuídas em disciplinas que cobrem desde estratégia de marketing até análise de dados e comportamento do consumidor.</p>
 
         <div class="grade-grid">
-            <!-- ============================================== -->
-            <!-- ATENÇÃO LIMONGI: Substitua as disciplinas abaixo -->
-            <!-- pelas disciplinas reais da turma 2026            -->
-            <!-- ============================================== -->
             <div class="grade-item">
                 <div class="grade-num">01</div>
-                <div><div class="grade-name">Marketing Estratégico</div><div class="grade-ch">30h/aula</div></div>
+                <div><div class="grade-name">Liderança: Competências e Engajamento</div></div>
             </div>
             <div class="grade-item">
                 <div class="grade-num">02</div>
-                <div><div class="grade-name">Comportamento do Consumidor</div><div class="grade-ch">30h/aula</div></div>
+                <div><div class="grade-name">Processo Criativo</div></div>
             </div>
             <div class="grade-item">
                 <div class="grade-num">03</div>
-                <div><div class="grade-name">Branding e Gestão de Marcas</div><div class="grade-ch">30h/aula</div></div>
+                <div><div class="grade-name">Design de Serviços</div></div>
             </div>
             <div class="grade-item">
                 <div class="grade-num">04</div>
-                <div><div class="grade-name">Marketing Digital e Mídias Sociais</div><div class="grade-ch">30h/aula</div></div>
+                <div><div class="grade-name">Comunicação Estratégica</div></div>
             </div>
             <div class="grade-item">
                 <div class="grade-num">05</div>
-                <div><div class="grade-name">Pesquisa de Mercado e Inteligência Competitiva</div><div class="grade-ch">30h/aula</div></div>
+                <div><div class="grade-name">Marketing Pessoal</div></div>
             </div>
             <div class="grade-item">
                 <div class="grade-num">06</div>
-                <div><div class="grade-name">Gestão de Vendas e Canais</div><div class="grade-ch">30h/aula</div></div>
+                <div><div class="grade-name">Diagnóstico Organizacional</div></div>
             </div>
             <div class="grade-item">
                 <div class="grade-num">07</div>
-                <div><div class="grade-name">Planejamento de Comunicação Integrada</div><div class="grade-ch">30h/aula</div></div>
+                <div><div class="grade-name">Cenários Econômicos</div></div>
             </div>
             <div class="grade-item">
                 <div class="grade-num">08</div>
-                <div><div class="grade-name">Métricas e Análise de Dados em Marketing</div><div class="grade-ch">30h/aula</div></div>
+                <div><div class="grade-name">Inteligência de Negócios</div></div>
             </div>
             <div class="grade-item">
                 <div class="grade-num">09</div>
-                <div><div class="grade-name">Inovação e Desenvolvimento de Produtos</div><div class="grade-ch">30h/aula</div></div>
+                <div><div class="grade-name">Dados, Pesquisa e Tendência</div></div>
             </div>
             <div class="grade-item">
                 <div class="grade-num">10</div>
-                <div><div class="grade-name">Empreendedorismo e Novos Negócios</div><div class="grade-ch">20h/aula</div></div>
+                <div><div class="grade-name">Economia Comportamental e Decisões do Consumidor</div></div>
             </div>
             <div class="grade-item">
                 <div class="grade-num">11</div>
-                <div><div class="grade-name">Metodologia Científica</div><div class="grade-ch">15h/aula</div></div>
+                <div><div class="grade-name">Gamificação e Inovação</div></div>
             </div>
             <div class="grade-item">
                 <div class="grade-num">12</div>
-                <div><div class="grade-name">Trabalho de Conclusão de Curso</div><div class="grade-ch">30h/aula</div></div>
+                <div><div class="grade-name">Customer Experience Design</div></div>
+            </div>
+            <div class="grade-item">
+                <div class="grade-num">13</div>
+                <div><div class="grade-name">Branding</div></div>
+            </div>
+            <div class="grade-item">
+                <div class="grade-num">14</div>
+                <div><div class="grade-name">Mídia Social, SEO e Conteúdo</div></div>
+            </div>
+            <div class="grade-item">
+                <div class="grade-num">15</div>
+                <div><div class="grade-name">Marketing Analytics</div></div>
+            </div>
+            <div class="grade-item">
+                <div class="grade-num">16</div>
+                <div><div class="grade-name">Experimentos em Marketing</div></div>
+            </div>
+            <div class="grade-item">
+                <div class="grade-num">17</div>
+                <div><div class="grade-name">Formação de Preço de Venda</div></div>
+            </div>
+            <div class="grade-item">
+                <div class="grade-num">18</div>
+                <div><div class="grade-name">Cultura e Consumo</div></div>
+            </div>
+            <div class="grade-item">
+                <div class="grade-num">19</div>
+                <div><div class="grade-name">Jogo de Empresas</div></div>
+            </div>
+            <div class="grade-item">
+                <div class="grade-num">20</div>
+                <div><div class="grade-name">3 Workshops de Marketing Estratégico</div></div>
             </div>
         </div>
         <p style="margin-top: 24px; font-size: 13px; color: var(--gray-500); text-align: center;">
@@ -820,15 +844,14 @@
                 <h3 class="coord-name">Prof. Dr. Ricardo Limongi</h3>
                 <p class="coord-title">Coordenador do MBA em Marketing Estratégico</p>
                 <p class="coord-bio">
-                    Professor da Faculdade de Administração, Ciências Contábeis e Ciências Econômicas (FACE) da Universidade Federal de Goiás. Doutor com ampla experiência em pesquisa na área de Marketing, comportamento do consumidor e estratégia organizacional.
+                    Professor da Faculdade de Administração, Ciências Contábeis e Ciências Econômicas (FACE) da Universidade Federal de Goiás, e Professor Visitante na Universidade del Pacífico no Peru e na Universidade de Santiago do Chile. Doutor em Administração pela FGV-SP com estágio na Cornell University.
                 </p>
-                <!-- ATENÇÃO: Adicionar bio mais completa do Limongi -->
                 <p class="coord-bio">
-                    Atua como pesquisador e coordenador do HiLab (Laboratório de pesquisa vinculado à FACE/UFG), desenvolvendo projetos que conectam academia e mercado.
+                    Atua como pesquisador e coordenador do HiLab — Hybrid Intelligence Laboratory, desenvolvendo projetos de Inteligência Artificial e Humana.
                 </p>
                 <div class="coord-links">
                     <a href="https://instagram.com/hilab.ufg" target="_blank" class="coord-link">&#128247; @hilab.ufg</a>
-                    <a href="mailto:sea.face@ufg.br" class="coord-link">&#9993; sea.face@ufg.br</a>
+                    <a href="mailto:hilab.face@ufg.br" class="coord-link">&#9993; hilab.face@ufg.br</a>
                     <a href="tel:+5562992434060" class="coord-link">&#128222; (62) 99243-4060</a>
                 </div>
             </div>
@@ -845,10 +868,7 @@
         <div class="invest-card">
             <div class="invest-header">
                 <p style="color: rgba(255,255,255,0.6); font-size: 14px; margin-bottom: 8px;">Valor total do curso</p>
-                <div class="invest-price">R$ 10.999,80</div>
-                <p style="color: rgba(255,255,255,0.5); font-size: 14px; margin-top: 8px;">
-                    ou 20 parcelas de <strong style="color: var(--accent-light);">R$ 549,99</strong>
-                </p>
+                <div class="invest-price">20x R$ 549,99</div>
             </div>
             <div class="invest-details">
                 <div class="invest-detail">
@@ -969,7 +989,7 @@
                     As aulas são presenciais ou online?
                     <span class="faq-arrow">+</span>
                 </button>
-                <div class="faq-answer"><div class="faq-answer-inner">O formato é semipresencial, com encontros quinzenais às sextas-feiras (18h30 às 22h30) e sábados (8h às 12h30), na FACE/UFG. Eventualmente há aulas no período da tarde do sábado.</div></div>
+                <div class="faq-answer"><div class="faq-answer-inner">O formato é semipresencial, com encontros quinzenais às sextas-feiras (19h às 22h30) e sábados (8h às 12h30), na FACE/UFG. Eventualmente há aulas no período da tarde do sábado (14h às 18h).</div></div>
             </div>
             <div class="faq-item">
                 <button class="faq-question">
@@ -990,7 +1010,7 @@
                     Qual a forma de pagamento?
                     <span class="faq-arrow">+</span>
                 </button>
-                <div class="faq-answer"><div class="faq-answer-inner">O investimento total é de R$ 10.999,80, dividido em 1 parcela de matrícula + 19 mensalidades de R$ 549,99. O pagamento é feito via boleto bancário.</div></div>
+                <div class="faq-answer"><div class="faq-answer-inner">O investimento total é de 20 parcelas de R$ 549,99 (1 parcela de matrícula + 19 mensalidades). O pagamento é feito via boleto bancário.</div></div>
             </div>
             <div class="faq-item">
                 <button class="faq-question">
@@ -1043,7 +1063,7 @@
                 <p>Para ativar o formulário de inscrição, substitua este bloco pelo iframe do Google Forms.</p>
                 <p style="font-size: 13px;">Instruções no código-fonte (Ctrl+U para visualizar).</p>
                 <br>
-                <a href="#" class="btn btn-primary" style="display: inline-flex;">
+                <a href="https://forms.gle/w9E4qxRfVVhUFSLF6" target="_blank" class="btn btn-primary" style="display: inline-flex;">
                     Acessar formulário externo &rarr;
                 </a>
             </div>
@@ -1079,7 +1099,7 @@
         <div>
             <h4>Contato</h4>
             <ul class="footer-links">
-                <li><a href="mailto:sea.face@ufg.br">sea.face@ufg.br</a></li>
+                <li><a href="mailto:hilab.face@ufg.br">hilab.face@ufg.br</a></li>
                 <li><a href="tel:+5562992434060">(62) 99243-4060</a></li>
                 <li><a href="https://instagram.com/hilab.ufg" target="_blank">@hilab.ufg</a></li>
                 <li><a href="https://hilab.face.ufg.br" target="_blank">hilab.face.ufg.br</a></li>
