--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
             <div class="diff-card">
                 <div class="diff-number">04</div>
                 <h3>Formato Flexível</h3>
-                <p>Aulas quinzenais com professores da ESPM, FGV-SP, PUC-PR, IBMEC e muitas outras.</p>
+                <p>Aulas quinzenais com professores da UFG, ESPM, FGV-SP, PUC-PR, IBMEC e muitas outras.</p>
             </div>
             <div class="diff-card">
                 <div class="diff-number">05</div>
@@ -941,19 +941,19 @@
         <p class="section-subtitle">Baixe os documentos necessários para sua inscrição.</p>
         <div class="documentos-grid">
             <!-- ATENÇÃO: Substituir os hrefs pelos links reais dos PDFs hospedados -->
-            <a href="#" class="doc-card" download>
+            <a href="docs/edital_t2026.pdf" class="doc-card" download>
                 <div class="doc-icon">&#128220;</div>
                 <div class="doc-name">Edital T2026</div>
                 <div class="doc-size">Edital completo do processo seletivo</div>
                 <div class="doc-btn">Baixar PDF</div>
             </a>
-            <a href="#" class="doc-card" download>
+            <a href="docs/ficha_inscricao_t2026.pdf" class="doc-card" download>
                 <div class="doc-icon">&#128203;</div>
                 <div class="doc-name">Ficha de Inscrição</div>
                 <div class="doc-size">Preencher e assinar antes do envio</div>
                 <div class="doc-btn">Baixar PDF</div>
             </a>
-            <a href="#" class="doc-card" download>
+            <a href="docs/termo_ciencia_edital_t2026.pdf" class="doc-card" download>
                 <div class="doc-icon">&#128221;</div>
                 <div class="doc-name">Termo de Ciência</div>
                 <div class="doc-size">Preencher e assinar antes do envio</div>
@@ -989,7 +989,7 @@
                     As aulas são presenciais ou online?
                     <span class="faq-arrow">+</span>
                 </button>
-                <div class="faq-answer"><div class="faq-answer-inner">O formato é semipresencial, com encontros quinzenais às sextas-feiras (19h às 22h30) e sábados (8h às 12h30), na FACE/UFG. Eventualmente há aulas no período da tarde do sábado (14h às 18h).</div></div>
+                <div class="faq-answer"><div class="faq-answer-inner">Encontros quinzenais às sextas-feiras (19h às 22h30) e sábados (8h às 12h30). Eventualmente há aulas no período da tarde do sábado (14h às 18h).</div></div>
             </div>
             <div class="faq-item">
                 <button class="faq-question">
