--- a/index.html
+++ b/index.html
@@ -620,8 +620,8 @@
             <div class="info-item">
                 <div class="info-icon">&#127891;</div>
                 <div>
-                    <div class="info-label">Modalidade</div>
-                    <div class="info-value">Semipresencial | Quinzenal</div>
+                    <div class="info-label">Frequência</div>
+                    <div class="info-value">Quinzenal</div>
                 </div>
             </div>
             <div class="info-item">
@@ -678,7 +678,7 @@
                     <div class="feature-icon">&#127891;</div>
                     <div>
                         <div class="feature-title">Selo UFG</div>
-                        <div class="feature-desc">Certificação emitida por uma das maiores universidades federais do Brasil, reconhecida pelo MEC.</div>
+                        <div class="feature-desc">Certificação emitida por uma das maiores universidades federais do Brasil.</div>
                     </div>
                 </div>
                 <div class="feature-card">
@@ -723,7 +723,7 @@
             <div class="diff-card">
                 <div class="diff-number">05</div>
                 <h3>Investimento Acessível</h3>
-                <p>Qualidade de universidade federal com investimento competitivo e parcelamento facilitado.</p>
+                <p>Qualidade de universidade federal com investimento competitivo.</p>
             </div>
             <div class="diff-card">
                 <div class="diff-number">06</div>
@@ -864,7 +864,7 @@
     <div class="section-inner">
         <div class="section-label">Investimento</div>
         <h2 class="section-title">Invista na sua carreira</h2>
-        <p class="section-subtitle">Qualidade de universidade federal com investimento acessível e parcelamento facilitado.</p>
+        <p class="section-subtitle">Qualidade de universidade federal com investimento acessível.</p>
         <div class="invest-card">
             <div class="invest-header">
                 <p style="color: rgba(255,255,255,0.6); font-size: 14px; margin-bottom: 8px;">Valor total do curso</p>
@@ -979,13 +979,6 @@
             </div>
             <div class="faq-item">
                 <button class="faq-question">
-                    Preciso ter experiência profissional?
-                    <span class="faq-arrow">+</span>
-                </button>
-                <div class="faq-answer"><div class="faq-answer-inner">Não é obrigatório, mas a experiência profissional é um dos critérios de pontuação no processo seletivo. Candidatos com vivência na área tendem a ter melhor aproveitamento do curso.</div></div>
-            </div>
-            <div class="faq-item">
-                <button class="faq-question">
                     As aulas são presenciais ou online?
                     <span class="faq-arrow">+</span>
                 </button>
@@ -1010,7 +1003,7 @@
                     Qual a forma de pagamento?
                     <span class="faq-arrow">+</span>
                 </button>
-                <div class="faq-answer"><div class="faq-answer-inner">O investimento total é de 20 parcelas de R$ 549,99 (1 parcela de matrícula + 19 mensalidades). O pagamento é feito via boleto bancário.</div></div>
+                <div class="faq-answer"><div class="faq-answer-inner">O investimento total é de 20 parcelas de R$ 549,99 (1 parcela de matrícula + 19 mensalidades). O pagamento é feito via boleto bancário e pix.</div></div>
             </div>
             <div class="faq-item">
                 <button class="faq-question">
@@ -1060,8 +1053,6 @@
             <div class="form-placeholder">
                 <div style="font-size: 48px; margin-bottom: 16px;">&#128221;</div>
                 <h3 style="color: var(--dark); margin-bottom: 8px;">Formulário de Inscrição</h3>
-                <p>Para ativar o formulário de inscrição, substitua este bloco pelo iframe do Google Forms.</p>
-                <p style="font-size: 13px;">Instruções no código-fonte (Ctrl+U para visualizar).</p>
                 <br>
                 <a href="https://forms.gle/w9E4qxRfVVhUFSLF6" target="_blank" class="btn btn-primary" style="display: inline-flex;">
                     Acessar formulário externo &rarr;
