--- a/index.html
+++ b/index.html
@@ -941,19 +941,19 @@
         <p class="section-subtitle">Baixe os documentos necessários para sua inscrição.</p>
         <div class="documentos-grid">
             <!-- ATENÇÃO: Substituir os hrefs pelos links reais dos PDFs hospedados -->
-            <a href="docs/edital_t2026.pdf" class="doc-card" download>
+            <a href="https://github.com/ricardolimongi/mba-marketing-ufg/blob/main/edital_mba_marketing_t2026.pdf" target="_blank" class="doc-card">
                 <div class="doc-icon">&#128220;</div>
                 <div class="doc-name">Edital T2026</div>
                 <div class="doc-size">Edital completo do processo seletivo</div>
                 <div class="doc-btn">Baixar PDF</div>
             </a>
-            <a href="docs/ficha_inscricao_t2026.pdf" class="doc-card" download>
+            <a href="https://github.com/ricardolimongi/mba-marketing-ufg/blob/main/ficha_inscricao_t2026.pdf" target="_blank" class="doc-card">
                 <div class="doc-icon">&#128203;</div>
                 <div class="doc-name">Ficha de Inscrição</div>
                 <div class="doc-size">Preencher e assinar antes do envio</div>
                 <div class="doc-btn">Baixar PDF</div>
             </a>
-            <a href="docs/termo_ciencia_edital_t2026.pdf" class="doc-card" download>
+            <a href="https://github.com/ricardolimongi/mba-marketing-ufg/blob/main/termo_ciencia_edital_t2026.pdf" target="_blank" class="doc-card">
                 <div class="doc-icon">&#128221;</div>
                 <div class="doc-name">Termo de Ciência</div>
                 <div class="doc-size">Preencher e assinar antes do envio</div>
@@ -979,7 +979,7 @@
             </div>
             <div class="faq-item">
                 <button class="faq-question">
-                    As aulas são presenciais ou online?
+                    Qual a frequência das aulas?
                     <span class="faq-arrow">+</span>
                 </button>
                 <div class="faq-answer"><div class="faq-answer-inner">Encontros quinzenais às sextas-feiras (19h às 22h30) e sábados (8h às 12h30). Eventualmente há aulas no período da tarde do sábado (14h às 18h).</div></div>
