--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
             </div>
             <h1>MBA em <span>Marketing Estratégico</span></h1>
             <p class="hero-subtitle">
-                Desenvolva uma visão estratégica de marketing e obtenha as ferramentas necessárias para a tomada de decisão no cenário competitivo atual.
+                Estratégia, dados, comportamento do consumidor e inovação. Tudo o que você precisa para liderar o marketing que o mercado exige agora.
             </p>
             <div class="hero-stats">
                 <div>
@@ -648,15 +648,15 @@
         <div class="sobre-grid">
             <div>
                 <div class="section-label">Sobre o curso</div>
-                <h2 class="section-title">Transforme sua carreira com uma visão estratégica de Marketing</h2>
+                <h2 class="section-title">O MBA para quem quer liderar, não apenas acompanhar</h2>
                 <p class="section-subtitle">
-                    O MBA em Marketing Estratégico da FACE/UFG capacita profissionais para atuar na gestão de marketing alinhada ao desempenho organizacional e à estratégia de negócios.
+                    Um MBA que conecta ciência, mercado e prática — com professores de universidades como FGV, ESPM, PUC e IBMEC, e a chancela da UFG.
                 </p>
                 <p style="color: var(--gray-500); margin-bottom: 24px;">
-                    Destinado a executivos e empreendedores que atuam direta ou indiretamente na área de Marketing, o curso combina teoria e prática por meio de seminários, estudos de caso, artigos e análises aprofundadas do mercado.
+                    O curso é para quem já atua e quer se atualizar com profundidade. Combinamos prática com rigor acadêmico: estudos de caso reais, seminários com especialistas e projetos que conectam sala de aula e mercado.
                 </p>
                 <p style="color: var(--gray-500);">
-                    Com um corpo docente formado por doutores e mestres com ampla experiência acadêmica e de mercado, você terá acesso ao que há de mais atual em estratégia de marketing, comportamento do consumidor, branding e inteligência de mercado.
+                    Professores com experiência internacional e produção científica de ponta, vindos das principais escolas de negócios do Brasil. Aqui, você aprende com quem está pesquisando e publicando sobre o que o mercado vai precisar amanhã.
                 </p>
             </div>
             <div class="sobre-features">
@@ -941,19 +941,19 @@
         <p class="section-subtitle">Baixe os documentos necessários para sua inscrição.</p>
         <div class="documentos-grid">
             <!-- ATENÇÃO: Substituir os hrefs pelos links reais dos PDFs hospedados -->
-            <a href="https://github.com/ricardolimongi/mba-marketing-ufg/blob/main/edital_mba_marketing_t2026.pdf" target="_blank" class="doc-card">
+            <a href="https://github.com/ricardolimongi/mba-marketing-ufg/raw/main/edital_mba_marketing_t2026.pdf" target="_blank" class="doc-card">
                 <div class="doc-icon">&#128220;</div>
                 <div class="doc-name">Edital T2026</div>
                 <div class="doc-size">Edital completo do processo seletivo</div>
                 <div class="doc-btn">Baixar PDF</div>
             </a>
-            <a href="https://github.com/ricardolimongi/mba-marketing-ufg/blob/main/ficha_inscricao_t2026.pdf" target="_blank" class="doc-card">
+            <a href="https://github.com/ricardolimongi/mba-marketing-ufg/raw/main/ficha_inscricao_t2026.pdf" target="_blank" class="doc-card">
                 <div class="doc-icon">&#128203;</div>
                 <div class="doc-name">Ficha de Inscrição</div>
                 <div class="doc-size">Preencher e assinar antes do envio</div>
                 <div class="doc-btn">Baixar PDF</div>
             </a>
-            <a href="https://github.com/ricardolimongi/mba-marketing-ufg/blob/main/termo_ciencia_edital_t2026.pdf" target="_blank" class="doc-card">
+            <a href="https://github.com/ricardolimongi/mba-marketing-ufg/raw/main/termo_ciencia_edital_t2026.pdf" target="_blank" class="doc-card">
                 <div class="doc-icon">&#128221;</div>
                 <div class="doc-name">Termo de Ciência</div>
                 <div class="doc-size">Preencher e assinar antes do envio</div>
